zmq_bindings.dart


  late final _sigpendingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<sigset_t>)>>(
          'sigpending');
  late final _sigpending =
      _sigpendingPtr.asFunction<int Function(ffi.Pointer<sigset_t>)>();

  int sigprocmask(
    int arg0,
    ffi.Pointer<sigset_t> arg1,
    ffi.Pointer<sigset_t> arg2,
  ) {
    return _sigprocmask(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _sigprocmaskPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Pointer<sigset_t>,
              ffi.Pointer<sigset_t>)>>('sigprocmask');
  late final _sigprocmask = _sigprocmaskPtr.asFunction<
      int Function(int, ffi.Pointer<sigset_t>, ffi.Pointer<sigset_t>)>();

  int sigrelse(
    int arg0,
  ) {
    return _sigrelse(
      arg0,
    );
  }

  late final _sigrelsePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('sigrelse');
  late final _sigrelse = _sigrelsePtr.asFunction<int Function(int)>();

  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>> sigset(
    int arg0,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>> arg1,
  ) {
    return _sigset(
      arg0,
      arg1,
    );
  }

  late final _sigsetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>> Function(
              ffi.Int,
              ffi.Pointer<
                  ffi.NativeFunction<ffi.Void Function(ffi.Int)>>)>>('sigset');
  late final _sigset = _sigsetPtr.asFunction<
      ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>> Function(
          int, ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>)>();

  int sigsuspend(
    ffi.Pointer<sigset_t> arg0,
  ) {
    return _sigsuspend(
      arg0,
    );
  }

  late final _sigsuspendPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<sigset_t>)>>(
          'sigsuspend');
  late final _sigsuspend =
      _sigsuspendPtr.asFunction<int Function(ffi.Pointer<sigset_t>)>();

  int sigwait(
    ffi.Pointer<sigset_t> arg0,
    ffi.Pointer<ffi.Int> arg1,
  ) {
    return _sigwait(
      arg0,
      arg1,
    );
  }

  late final _sigwaitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<sigset_t>, ffi.Pointer<ffi.Int>)>>('sigwait');
  late final _sigwait = _sigwaitPtr
      .asFunction<int Function(ffi.Pointer<sigset_t>, ffi.Pointer<ffi.Int>)>();

  void psignal(
    int arg0,
    ffi.Pointer<ffi.Char> arg1,
  ) {
    return _psignal(
      arg0,
      arg1,
    );
  }

  late final _psignalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.UnsignedInt, ffi.Pointer<ffi.Char>)>>('psignal');
  late final _psignal =
      _psignalPtr.asFunction<void Function(int, ffi.Pointer<ffi.Char>)>();

  int sigblock(
    int arg0,
  ) {
    return _sigblock(
      arg0,
    );
  }

  late final _sigblockPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('sigblock');
  late final _sigblock = _sigblockPtr.asFunction<int Function(int)>();

  int sigsetmask(
    int arg0,
  ) {
    return _sigsetmask(
      arg0,
    );
  }

  late final _sigsetmaskPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('sigsetmask');
  late final _sigsetmask = _sigsetmaskPtr.asFunction<int Function(int)>();

  int sigvec1(
    int arg0,
    ffi.Pointer<sigvec> arg1,
    ffi.Pointer<sigvec> arg2,
  ) {
    return _sigvec1(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _sigvec1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Pointer<sigvec>, ffi.Pointer<sigvec>)>>('sigvec');
  late final _sigvec1 = _sigvec1Ptr.asFunction<
      int Function(int, ffi.Pointer<sigvec>, ffi.Pointer<sigvec>)>();

  int zmq_errno() {
    return _zmq_errno();
  }

  late final _zmq_errnoPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('zmq_errno');
  late final _zmq_errno = _zmq_errnoPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> zmq_strerror(
    int errnum_,
  ) {
    return _zmq_strerror(
      errnum_,
    );
  }

  late final _zmq_strerrorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
          'zmq_strerror');
  late final _zmq_strerror =
      _zmq_strerrorPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  void zmq_version(
    ffi.Pointer<ffi.Int> major_,
    ffi.Pointer<ffi.Int> minor_,
    ffi.Pointer<ffi.Int> patch_,
  ) {
    return _zmq_version(
      major_,
      minor_,
      patch_,
    );
  }

  late final _zmq_versionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>)>>('zmq_version');
  late final _zmq_version = _zmq_versionPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<ffi.Void> zmq_ctx_new() {
    return _zmq_ctx_new();
  }

  late final _zmq_ctx_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'zmq_ctx_new');
  late final _zmq_ctx_new =
      _zmq_ctx_newPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  int zmq_ctx_term(
    ffi.Pointer<ffi.Void> context_,
  ) {
    return _zmq_ctx_term(
      context_,
    );
  }

  late final _zmq_ctx_termPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_ctx_term');
  late final _zmq_ctx_term =
      _zmq_ctx_termPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_ctx_shutdown(
    ffi.Pointer<ffi.Void> context_,
  ) {
    return _zmq_ctx_shutdown(
      context_,
    );
  }

  late final _zmq_ctx_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_ctx_shutdown');
  late final _zmq_ctx_shutdown =
      _zmq_ctx_shutdownPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_ctx_set(
    ffi.Pointer<ffi.Void> context_,
    int option_,
    int optval_,
  ) {
    return _zmq_ctx_set(
      context_,
      option_,
      optval_,
    );
  }

  late final _zmq_ctx_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)>>('zmq_ctx_set');
  late final _zmq_ctx_set = _zmq_ctx_setPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  int zmq_ctx_get(
    ffi.Pointer<ffi.Void> context_,
    int option_,
  ) {
    return _zmq_ctx_get(
      context_,
      option_,
    );
  }

  late final _zmq_ctx_getPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'zmq_ctx_get');
  late final _zmq_ctx_get =
      _zmq_ctx_getPtr.asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Void> zmq_init(
    int io_threads_,
  ) {
    return _zmq_init(
      io_threads_,
    );
  }

  late final _zmq_initPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Int)>>(
          'zmq_init');
  late final _zmq_init =
      _zmq_initPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  int zmq_term(
    ffi.Pointer<ffi.Void> context_,
  ) {
    return _zmq_term(
      context_,
    );
  }

  late final _zmq_termPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_term');
  late final _zmq_term =
      _zmq_termPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_ctx_destroy(
    ffi.Pointer<ffi.Void> context_,
  ) {
    return _zmq_ctx_destroy(
      context_,
    );
  }

  late final _zmq_ctx_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_ctx_destroy');
  late final _zmq_ctx_destroy =
      _zmq_ctx_destroyPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_msg_init(
    ffi.Pointer<zmq_msg_t> msg_,
  ) {
    return _zmq_msg_init(
      msg_,
    );
  }

  late final _zmq_msg_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zmq_msg_t>)>>(
          'zmq_msg_init');
  late final _zmq_msg_init =
      _zmq_msg_initPtr.asFunction<int Function(ffi.Pointer<zmq_msg_t>)>();

  int zmq_msg_init_size(
    ffi.Pointer<zmq_msg_t> msg_,
    int size_,
  ) {
    return _zmq_msg_init_size(
      msg_,
      size_,
    );
  }

  late final _zmq_msg_init_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zmq_msg_t>, ffi.Size)>>('zmq_msg_init_size');
  late final _zmq_msg_init_size = _zmq_msg_init_sizePtr
      .asFunction<int Function(ffi.Pointer<zmq_msg_t>, int)>();

  int zmq_msg_init_data(
    ffi.Pointer<zmq_msg_t> msg_,
    ffi.Pointer<ffi.Void> data_,
    int size_,
    ffi.Pointer<zmq_free_fn> ffn_,
    ffi.Pointer<ffi.Void> hint_,
  ) {
    return _zmq_msg_init_data(
      msg_,
      data_,
      size_,
      ffn_,
      hint_,
    );
  }

  late final _zmq_msg_init_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zmq_msg_t>,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<zmq_free_fn>,
              ffi.Pointer<ffi.Void>)>>('zmq_msg_init_data');
  late final _zmq_msg_init_data = _zmq_msg_init_dataPtr.asFunction<
      int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<zmq_free_fn>, ffi.Pointer<ffi.Void>)>();

  int zmq_msg_send(
    ffi.Pointer<zmq_msg_t> msg_,
    ffi.Pointer<ffi.Void> s_,
    int flags_,
  ) {
    return _zmq_msg_send(
      msg_,
      s_,
      flags_,
    );
  }

  late final _zmq_msg_sendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Void>,
              ffi.Int)>>('zmq_msg_send');
  late final _zmq_msg_send = _zmq_msg_sendPtr.asFunction<
      int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Void>, int)>();

  int zmq_msg_recv(
    ffi.Pointer<zmq_msg_t> msg_,
    ffi.Pointer<ffi.Void> s_,
    int flags_,
  ) {
    return _zmq_msg_recv(
      msg_,
      s_,
      flags_,
    );
  }

  late final _zmq_msg_recvPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Void>,
              ffi.Int)>>('zmq_msg_recv');
  late final _zmq_msg_recv = _zmq_msg_recvPtr.asFunction<
      int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Void>, int)>();

  int zmq_msg_close(
    ffi.Pointer<zmq_msg_t> msg_,
  ) {
    return _zmq_msg_close(
      msg_,
    );
  }

  late final _zmq_msg_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zmq_msg_t>)>>(
          'zmq_msg_close');
  late final _zmq_msg_close =
      _zmq_msg_closePtr.asFunction<int Function(ffi.Pointer<zmq_msg_t>)>();

  int zmq_msg_move(
    ffi.Pointer<zmq_msg_t> dest_,
    ffi.Pointer<zmq_msg_t> src_,
  ) {
    return _zmq_msg_move(
      dest_,
      src_,
    );
  }

  late final _zmq_msg_movePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zmq_msg_t>, ffi.Pointer<zmq_msg_t>)>>('zmq_msg_move');
  late final _zmq_msg_move = _zmq_msg_movePtr.asFunction<
      int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<zmq_msg_t>)>();

  int zmq_msg_copy(
    ffi.Pointer<zmq_msg_t> dest_,
    ffi.Pointer<zmq_msg_t> src_,
  ) {
    return _zmq_msg_copy(
      dest_,
      src_,
    );
  }

  late final _zmq_msg_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zmq_msg_t>, ffi.Pointer<zmq_msg_t>)>>('zmq_msg_copy');
  late final _zmq_msg_copy = _zmq_msg_copyPtr.asFunction<
      int Function(ffi.Pointer<zmq_msg_t>, ffi.Pointer<zmq_msg_t>)>();

  ffi.Pointer<ffi.Void> zmq_msg_data(
    ffi.Pointer<zmq_msg_t> msg_,
  ) {
    return _zmq_msg_data(
      msg_,
    );
  }
